# tz_authservice_fastapi

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: lifespan.py  main.py
app/alembic/: env.py
app/alembic/versions/: 6ffa32cd5d25_init.py
app/api/: __init__.py
app/api/depends/: __init__.py  auth.py  repository.py
app/api/v1/: __init__.py  user.py
app/core/: security.py  settings.py
app/models/: user.py
app/repository/: base_repository.py  models.py  user_repository.py
app/tests/: conftest.py
app/tests/api/: test_user.py
app/tests/core/: test_security.py
